<resources>
    <string name="app_name">salah</string>
    <string name="logo_name">SALAH</string>
    <string name="slogan_name">We will help you to find your way!</string>
    <string name="powered">powered by salah</string>
    <string name="sujud">sujud</string>
    <string name="salah">salah</string>
    <string name="salah_upr">SALAH</string>

    <string name="os_s1_title">slide 1</string>
    <string name="os_s2_title">slide 2</string>
    <string name="os_s3_title">slide 3</string>
    <string name="os_s4_title">slide 4</string>

    <string name="os_s1_desc">slide 1 desc</string>
    <string name="os_s2_desc">slide 2 desc</string>
    <string name="os_s3_desc">slide 3 desc</string>
    <string name="os_s4_desc">slide 4 desc</string>

    <string name="os_skip_btn">skip</string>
    <string name="os_next_btn">next</string>
    <string name="os_start_btn">start</string>

    <!-- dashboard -->
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="airports">Airports</string>

    <!-- titles and desc -->
    <string name="timings">ENTRADA DE HORÁRIO DE SUALAT</string>
    <string name="timings_desc">Entra\nde Horário\nde Sualah</string>
    <string name="masaajid">Massájid</string>

    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_locations_desc">All Featured Locations desc</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search...</string>
    <string name="salah_ar">صلاة</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add_missing_place">ADD MISSING PLACE</string>
    <string name="all_categories">Massájid</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="sign_up">Sign Up</string>
    <string name="how_we_work">How we work?</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_password">Enter password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password</string>
    <string name="create_account">Create\nAccount</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_email">Enter email</string>
    <string name="next_btn">Next</string>
    <string name="back">back</string>
    <string name="step1_3">1/3</string>
    <string name="todo">TODO</string>
    <string name="otp_code_text">Code</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">Enter one time password sent on\n+92333</string>
    <string name="verify_code">Verify Code</string>
    <string name="forget_password_detail">Provide your account\'s email for which you want to reset your password!</string>
    <string name="make_selection">Make\nSelection</string>
    <string name="make_selection_detail">Select which contact detail should we user to reset your password?</string>
    <string name="via_sms">via sms:</string>
    <string name="via_mail">via email:</string>
    <string name="new_credentials">New Credentials</string>
    <string name="new_credentials_detail">Your identity has been verified!\nSet your new password</string>
    <string name="password_updated">Password Updated</string>
    <string name="password_updated_success_message">Your password has been updated!</string>
    <string name="user_profile">User\nProfile</string>
    <string name="locker">locker</string>
    <string name="forgot_password_title">Forgot\nPassword</string>
    <string name="masgid">Masgid</string>
    <string name="localizacao">Localização</string>
    <string name="add_masjid">Adicionar Masgid</string>
    <string name="masjid">MASGID</string>
    <string name="step_2_6">2/6</string>
    <string name="masjid_name">Nome do Masgid</string>
    <string name="fajr">Fajr</string>

</resources>