<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_all_categories"
            android:icon="@drawable/ic_category"
            android:title="@string/all_categories" />
        <item
            android:id="@+id/nav_add_missing_place"
            android:icon="@drawable/ic_add_location"
            android:title="@string/add_missing_place" />
    </group>
    <item android:title="Profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:icon="@drawable/ic_login"
                    android:id="@+id/nav_login"
                    android:title="@string/login" />
                <item
                    android:icon="@drawable/ic_profile"
                    android:id="@+id/nav_profile"
                    android:title="@string/profile" />
                <item
                    android:icon="@drawable/ic_logout"
                    android:id="@+id/nav_logout"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>
    <item android:title="Categories">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:icon="@drawable/ic_restaurant"
                    android:id="@+id/nav_restaurants"
                    android:title="@string/restaurants" />
                <item
                    android:icon="@drawable/ic_bank"
                    android:id="@+id/nav_bank"
                    android:title="@string/banks" />
                <item
                    android:icon="@drawable/ic_airport"
                    android:id="@+id/nav_airport"
                    android:title="@string/airports" />
                <item
                    android:icon="@drawable/ic_shop"
                    android:id="@+id/nav_shop"
                    android:title="@string/shops" />
            </group>
        </menu>
    </item>
    <item android:title="Share">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:icon="@drawable/ic_share"
                    android:id="@+id/nav_share"
                    android:title="@string/share" />
                <item
                    android:icon="@drawable/ic_star_rate"
                    android:id="@+id/nav_rate_us"
                    android:title="@string/rate_us" />
            </group>
        </menu>
    </item>
</menu>