<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/db_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DashboardActivity">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/db_navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/lightWhite"
        android:theme="@style/navigation"
        app:headerLayout="@layout/menu_header"
        app:itemBackground="@drawable/nav_item_background"
        app:itemTextColor="@drawable/nav_item_text"
        app:menu="@menu/main_menu" />

    <LinearLayout
        android:id="@+id/db_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:id="@+id/db_menu"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="TODO"
                android:src="@drawable/ic_menu" />

            <ImageView
                android:id="@+id/db_add"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@color/banner_background"
                android:padding="5dp"
                android:src="@drawable/ic_more_vert" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/db_logo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/advent_pro_bold"
                        android:text="@string/logo_name"
                        android:textSize="35sp"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_below="@id/db_logo"
                        android:layout_margin="20dp"
                        android:background="@color/white"
                        android:elevation="4dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="15dp"
                            android:fontFamily="@font/advent_pro_medium"
                            android:text="@string/search_text" />

                        <ImageView
                            android:id="@+id/db_search"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="15dp"
                            android:src="@drawable/ic_search" />

                    </RelativeLayout>


                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/advent_pro_bold"
                            android:text="@string/timings"
                            android:textAllCaps="true"
                            android:textColor="@color/colorAccent"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/db_timings_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/advent_pro_bold"
                            android:text="@string/masaajid"
                            android:textAllCaps="true"
                            android:textColor="@color/colorAccent"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:fontFamily="@font/advent_pro_bold"
                            android:text="@string/view_all" />


                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/db_masjid_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="700dp"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>